@@ -5,6 +5,10 @@ Proxy
 - Support for URL commands
 - HTML debug info (to allow filter designers to troubleshoot their filters)
 
+GUI
+- Imported Proxomitron filters are activated in the edited configuration if they
+  were active in the Proxomitron file.
+
 
 --------------------------------------------------------------------------------
 Version 0.2.4 (July 20th, 2005)
